src/main/java/com/example/dddstudy/global/error/GlobalExceptionHandler.java
package com.example.dddstudy.global.error;

import org.springframework.web.bind.annotation.ControllerAdvice;

@ControllerAdvice
public class GlobalExceptionHandler {
}
